@@ -3,6 +3,7 @@
 -About Box
 -Level Change
 -Display bugfixes
+-Color Display (if available)
 
 0.61.00 2002-SEP-21
 
